# Compiler-Term-Project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  compiler.sh  koopa.sh  riscv.sh
case/: 001-main.sy  002-comments.sy
src/: ast.h  global_variables.hpp  main.cpp  sysy.l  sysy.y  utility.hpp
src/ast/: ast.h
src/backend/: global_variable_manager.cpp  global_variable_manager.h  koopa_to_riscv.cpp  koopa_to_riscv.h  register_manager.h  stack_frame_manager.cpp  stack_frame_manager.h
src/frontend/: ast.h  symbol_table.cpp  symbol_table.h  sysy_to_koopa.cpp  sysy_to_koopa.h  type_system.h
src/parser/: sysy.l  sysy.y  yy_interface.h
